PLSQLDeveloper/PlugInDoc/Interface/PlSqlDevFunctions.h


    __declspec(dllexport) void RegisterCallback(int nIndex, void *pvAddr);

    __declspec(dllexport) char* IdentifyPlugIn(int);

    __declspec(dllexport) void OnCreate();

    __declspec(dllexport) void OnActivate();

    __declspec(dllexport) void OnDestroy();


    __declspec(dllexport) char* CreateMenuItem(int);

    __declspec(dllexport) void OnMenuClick(int);


    // uncomment the ones that are of interest
    __declspec(dllexport) void OnBrowserChange();

    __declspec(dllexport) void OnWindowChange();

    __declspec(dllexport) void OnConnectionChange();

// SYSTEM Info functions

// Returns the PL/SQL Developer main and subversion, for example 210 for version 2.1.0. This
// might be useful if you want to use functions that are not available in all versions.
/*FUNC: 1*/ extern int (*SYS_Version)();


// Returns the registry root name of PL/SQL Developer in HKEY_CURRENT_USER (usually
// “Software\PL/SQL Developer”). If you want to save your settings in the registry, you can
// create a section within the PL/SQL Developer section.
//
// Note: In PL/SQL Developer 3.1, the registry section is moved to: (“Software\Allround
// Automations\PL/SQL Developer”)
/*FUNC: 2*/ extern char *(*SYS_Registry)();


// The directory where PL/SQL Developer is installed, for example “C:\Program Files\PLSQL
// Developer”.
/*FUNC: 3*/ extern char *(*SYS_RootDir)();


// The Oracle directory, for example “C:\Orawin95”
/*FUNC: 4*/ extern char *(*SYS_OracleHome)();

// IDE functions

// Use this function to enable or disable a menu. The ID is the Plug-In ID, which is given by
// the IdentifyPlugIn function. The Index is the menu index, which the menu was related to by
// the CreateMenuItem function. The Enabled boolean determines if the menu item is enabled or
// grayed.
/*FUNC: 10*/ extern void (*IDE_MenuState)(int ID, int Index, BOOL Enabled);


// Returns a boolean that indicates if PL/SQL Developer is currently connected to a database.
/*FUNC: 11*/ extern BOOL (*IDE_Connected)();


// Returns the username, password and database of the current connection.
/*FUNC: 12*/ extern void (*IDE_GetConnectionInfo)(char **Username, char **Password, char **Database);


// Returns information about the selected item in the Browser. If no item is selected, all items are empty.
/*FUNC: 13*/ extern void (*IDE_GetBrowserInfo)(char **ObjectType, char **ObjectOwner, char **ObjectName);


// Returns the type of the current window.
// 1 = SQL Window
// 2 = Test Window
// 3 = Procedure Window
// 4 = Command Window
// 5 = Plan Window
// 6 = Report Window
// 0 = None of the above
/*FUNC: 14*/ extern int (*IDE_GetWindowType)();


// Returns the Application handle of PL/SQL Developer
/*FUNC: 15*/ extern int (*IDE_GetAppHandle)();


// Returns the handle of PL/SQL Developers main window
/*FUNC: 16*/ extern HWND (*IDE_GetWindowHandle)();


// Returns the handle of PL/SQL Developers client window
/*FUNC: 17*/ extern HWND (*IDE_GetClientHandle)();


// Returns the handle of the active child form
/*FUNC: 18*/ extern HWND (*IDE_GetChildHandle)();


// Creates a new window. The Text parameter contains text that is placed in the window. If the Execute Boolean is true, the Window will be executed.
// WindowType can be one of the following values:
// 1 = SQL Window
// 2 = Test Window
// 3 = Procedure Window
// 4 = Command Window
// 5 = Plan Window
// 6 = Report Window
/*FUNC: 20*/ extern void (*IDE_CreateWindow)(int WindowType, char *Text, BOOL Execute);


// Creates a window of type WindowType and loads the specified file.
// WindowType can be one of the following values:
// 1 = SQL Window
// 2 = Test Window
// 3 = Procedure Window
// 4 = Command Window
// The function returns True if successful.
//
// Version 301 and higher
// If you pass 0 as WindowType, PL/SQL Developer will try to determine the actual WindowType on the extension of the filename.
/*FUNC: 21*/ extern BOOL (*IDE_OpenFile)(int WindowType, char *Filename);


// This function saves the current window. It returns True if successful.
/*FUNC: 22*/ extern BOOL (*IDE_SaveFile)();


// Return the filename of the current child window.
// See also IDE_SetFilename()
/*FUNC: 23*/ extern char *(*IDE_Filename)();


// Closes the current child window
/*FUNC: 24*/ extern void (*IDE_CloseFile)();


// Set the ReadOnly status of the current Window
/*FUNC: 25*/ extern void (*IDE_SetReadOnly)(BOOL ReadOnly);


// Retrieves the text from the current child window.
/*FUNC: 30*/ extern char *(*IDE_GetText)();


// Retrieves the selected text from the current child window.
/*FUNC: 31*/ extern char *(*IDE_GetSelectedText)();


// Retrieves the word the cursor is on in the current child window.
/*FUNC: 32*/ extern char *(*IDE_GetCursorWord)();


// Returns the handle of the editor of the current child window.
/*FUNC: 33*/ extern HWND (*IDE_GetEditorHandle)();


//*****************************************************************************
//
//    SQL functions
//
//****X******************X************************X************************X***

// Executes the statement defined in the SQL parameter. The function returns 0 if successful,
// else the Oracle error number.
/*FUNC: 40*/ extern int (*SQL_Execute)(char *SQL);


// Returns the number of fields after a SQL_Execute.
/*FUNC: 41*/ extern int (*SQL_FieldCount)();


// Returns if there are any more rows to fetch.
/*FUNC: 42*/ extern BOOL (*SQL_Eof)();


// Returns the next row after a SQL_Execute. The function returns 0 if successful, else the
// Oracle error number.
/*FUNC: 43*/ extern int (*SQL_Next)();


// Returns the field specified by the Field parameter.
/*FUNC: 44*/ extern char *(*SQL_Field)(int Field);


// Returns the fieldname specified by the Field parameter.
/*FUNC: 45*/ extern char *(*SQL_FieldName)(int Field);


// Converts a fieldname into an index, which can be used in the SQL_Field, SQL_FieldName and
// SQL_FieldType functions. If the field does not exist, the return value is -1.
/*FUNC: 46*/ extern int (*SQL_FieldIndex)(char *Name);


// Return the fieldtype of a field.
// 3 = otInteger
// 4 = otFloat
// 5 = otString
// 8 = otLong
// 12 = otDate
// 24 = otLongRaw
/*FUNC: 47*/ extern int (*SQL_FieldType)(int Field);